# rustyshare

./: .gitignore  Cargo.toml  LICENSE  readme.adoc  readme.rst
retroshare_compat/: Cargo.toml
retroshare_compat/src/: basics.rs  discovery.rs  events.rs  foo.rs  groups.rs  gxs.rs  keyring.rs  lib.rs  peers.rs  utils.rs
retroshare_compat/src/config/: mod.rs
retroshare_compat/src/gxs/: db.rs  mod.rs  service_string.rs
retroshare_compat/src/gxs/sqlite/: database.rs  mod.rs  types.rs
retroshare_compat/src/serde/: de.rs  error.rs  mod.rs  ser.rs
retroshare_compat/src/services/: bwctrl.rs  chat.rs  discovery.rs  mod.rs  rtt.rs  service_info.rs  status.rs  turtle.rs
retroshare_compat/src/sqlite/: mod.rs
retroshare_compat/src/tlv/: macros.rs  mod.rs  nom.rs  string.rs  tags.rs  tlv.rs  tlv_base.rs  tlv_ip_addr.rs  tlv_keys.rs  tlv_map.rs  tlv_set.rs  tlv_string.rs
retroshare_compat/src/tlv/serde/: de.rs  error.rs  mod.rs  ser.rs
retroshare_compat/src/webui/: chat.rs  identity.rs  mod.rs
src/: error.rs  log_internal.rs  main.rs  serial_stuff.rs  utils.rs
src/controller/: connected_peer.rs  mod.rs
src/docs/: gxs_transactions.adoc
src/gxs/: gxs_backend.rs  gxsid.rs  mod.rs  nxs.rs  nxs_transactions.rs  transaction.rs
src/low_level_parsing/: headers.rs  mod.rs  parser_network.rs
src/model/: gxs.rs  gxs_timestamps.rs  intercom.rs  location.rs  mod.rs  person.rs
src/model/peers/: location.rs  mod.rs
src/model/services/: chat.rs  gxs_id.rs  mod.rs
src/parser/: headers.rs  mod.rs
src/retroshare_compat/: config_store.rs  keyring.rs  mod.rs  ssl_key.rs
src/services/: _template.rs  bwctrl.rs  chat.rs  discovery.rs  gxs_id.rs  heartbeat.rs  mod.rs  rtt.rs  service_info.rs  status.rs  turtle.rs
src/transport/: connection.rs  listener.rs  mod.rs  ssl.rs  tcp_native_tls.rs  tcp_openssl.rs  tcp_rustls.rs
src/transport_ng/: mod.rs
src/webui/: actix.rs  identity.rs  mod.rs  msgs.rs  peers.rs  rocket.rs
