[package]
name = "rustyshare"
version = "0.1.0"
authors = ["sehraf <sehraf42@gmail.com>"]
edition = "2018"
# proc-macro = true

[features]
# default = ["logging"]
# logging = ["log"]

[dependencies]
# log = { version = "0.4.4", optional = true }
chrono = "^0"
rpassword = "^5"
dirs = "^3"

sequoia-openpgp = "^0"
openssl = "^0"
byteorder = "^1"
base64 = "^0"

# rustls = "0.18.0"
# webpki = "*"

# native-tls = "0.2.4"

# pem = "*"
# futures = "0.3.5"

# num = "0.3"
# num-derive = "0.3"
# num-traits = "0.2.12"
# proc_macro = "*"
